--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-replace": "^2.3.0",
     "@tslab/typescript-for-tslab": "4.1.2",
-    "@types/node": "^14.14.13",
     "commander": "^6.2.0",
     "rollup": "^2.34.2",
     "semver": "^7.3.4",
-    "zeromq": "^6.0.0-beta.6"
+    "zeromq": "^6.0.0-beta.6",
+     "ramda": "^0.27.1",
+    "s-expression": "^3.1.1"
   },
   "scripts": {
     "//": "experimental-vm-modules enables https://nodejs.org/docs/latest-v12.x/api/vm.html#vm_class_vm_sourcetextmodule",
@@ -42,6 +43,14 @@
     "jest": "^26.1.0",
     "prettier": "2.2.1",
     "ts-jest": "^26.1.1",
-    "typescript": "^4.1.3"
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.28",
+    "@types/ramda": "^0.27.38",
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
